Make it possible to automatically start a persistent share when OnionShare starts

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -214,7 +214,8 @@
     "mode_settings_advanced_toggle_show": "Show advanced settings",
     "mode_settings_advanced_toggle_hide": "Hide advanced settings",
     "mode_settings_title_label": "Custom title",
-    "mode_settings_persistent_checkbox": "Always open this tab when OnionShare is started",
+    "mode_settings_persistent_checkbox": "Always open this tab when OnionShare is started (the onion address will stay the same)",
+    "mode_settings_persistent_autostart_on_launch_checkbox": "Automatically start this onion service when OnionShare starts",
     "mode_settings_public_checkbox": "This is a public OnionShare service (disables private key)",
     "mode_settings_autostart_timer_checkbox": "Start onion service at scheduled time",
     "mode_settings_autostop_timer_checkbox": "Stop onion service at scheduled time",
