Fix reference to persistent setting whose label has a different phrase now

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -124,10 +124,10 @@
     "gui_receive_url_public_description": "<b>Anyone</b> with this OnionShare address can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_chat_url_description": "<b>Anyone</b> with this OnionShare address and private key can <b>join this chat room</b> using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_chat_url_public_description": "<b>Anyone</b> with this OnionShare address can <b>join this chat room</b> using the <b>Tor Browser</b>: <img src='{}' />",
-    "gui_url_label_persistent": "This share will not auto-stop.<br><br>Every subsequent share reuses the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
+    "gui_url_label_persistent": "This share will not auto-stop.<br><br>Every subsequent share reuses the address. (To use one-time addresses, turn off \"Always open this tab when OnionShare is started\" in the settings.)",
     "gui_url_label_stay_open": "This share will not auto-stop.",
     "gui_url_label_onetime": "This share will stop after first completion.",
-    "gui_url_label_onetime_and_persistent": "This share will not auto-stop.<br><br>Every subsequent share will reuse the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
+    "gui_url_label_onetime_and_persistent": "This share will not auto-stop.<br><br>Every subsequent share will reuse the address. (To use one-time addresses, turn off \"Always open this tab when OnionShare is started\" in the settings.)",
     "gui_url_instructions": "First, send the OnionShare address below:",
     "gui_url_instructions_public_mode": "Send the OnionShare address below:",
     "gui_client_auth_instructions": "Next, send the private key to allow access to your OnionShare service:",
