Improve icons with FA and better dark/light mode. Change 'Ready to [mode]' to 'Stopped' for clearer UX

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -131,15 +131,15 @@
     "gui_url_instructions": "First, send the OnionShare address below:",
     "gui_url_instructions_public_mode": "Send the OnionShare address below:",
     "gui_client_auth_instructions": "Next, send the private key to allow access to your OnionShare service:",
-    "gui_status_indicator_share_stopped": "Ready to share",
+    "gui_status_indicator_share_stopped": "Stopped",
     "gui_status_indicator_share_working": "Starting…",
     "gui_status_indicator_share_scheduled": "Scheduled…",
     "gui_status_indicator_share_started": "Sharing",
-    "gui_status_indicator_receive_stopped": "Ready to receive",
+    "gui_status_indicator_receive_stopped": "Stopped",
     "gui_status_indicator_receive_working": "Starting…",
     "gui_status_indicator_receive_scheduled": "Scheduled…",
     "gui_status_indicator_receive_started": "Receiving",
-    "gui_status_indicator_chat_stopped": "Ready to chat",
+    "gui_status_indicator_chat_stopped": "Stopped",
     "gui_status_indicator_chat_working": "Starting…",
     "gui_status_indicator_chat_scheduled": "Scheduled…",
     "gui_status_indicator_chat_started": "Chatting",
