--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -99,6 +99,7 @@
     "gui_settings_button_help": "Help",
     "gui_settings_version_label": "You are using OnionShare {}",
     "gui_settings_help_label": "Need help? See <a href='https://docs.onionshare.org'>docs.onionshare.org</a>",
+    "gui_settings_license_label": "OnionShare is licensed under the GPL v3.<br>Third-party licenses can be viewed here:<br><a href='https://github.com/onionshare/onionshare/tree/main/licenses'>https://github.com/onionshare/onionshare/tree/main/licenses</a>",
     "settings_test_success": "Connected to the Tor controller.\n\nTor version: {}\nSupports ephemeral onion services: {}.\nSupports client authentication: {}.\nSupports next-gen .onion addresses: {}.",
     "connecting_to_tor": "Connecting to the Tor network",
     "update_available": "New OnionShare out. <a href='{}'>Click here</a> to get it.<br><br>You are using {} and the latest is {}.",
