Rename 'Advanced settings' to 'Scheduling settings' and move all time-based settings there.
This includes the 'Automatically start this (persistent) onion when OnionShare starts' and 'stop sharing after files have been downloaded'.

Make the 'Custom title' be the first field in all modes, and make sure mode-specific settings are shown after others but before the Scheduling toggle, for a more consistent view of settings for each mode.

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -212,8 +212,8 @@
     "gui_quit_warning_description": "Quit and close all tabs, even though sharing is active in some of them?",
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_cancel": "Cancel",
-    "mode_settings_advanced_toggle_show": "Show advanced settings",
-    "mode_settings_advanced_toggle_hide": "Hide advanced settings",
+    "mode_settings_scheduling_toggle_show": "Show scheduling settings",
+    "mode_settings_scheduling_toggle_hide": "Hide scheduling settings",
     "mode_settings_title_label": "Custom title",
     "mode_settings_persistent_checkbox": "Always open this tab when OnionShare is started (the onion address will stay the same)",
     "mode_settings_persistent_autostart_on_launch_checkbox": "Automatically start this onion service when OnionShare starts",
