Adds Download Mode, for downloading from another OnionShare

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -18,6 +18,8 @@
     "gui_share_stop_server_autostop_timer": "Stop Sharing ({})",
     "gui_chat_start_server": "Start chat server",
     "gui_chat_stop_server": "Stop chat server",
+    "gui_download_start_server": "Start downloading",
+    "gui_download_stop_server": "Stop downloading",
     "gui_stop_server_autostop_timer_tooltip": "Auto-stop timer ends at {}",
     "gui_start_server_autostart_timer_tooltip": "Auto-start timer ends at {}",
     "gui_receive_start_server": "Start Receive Mode",
@@ -144,6 +146,8 @@
     "gui_status_indicator_chat_working": "Starting…",
     "gui_status_indicator_chat_scheduled": "Scheduled…",
     "gui_status_indicator_chat_started": "Chatting",
+    "gui_status_indicator_download_stopped": "Stopped",
+    "gui_status_indicator_download_working": "Downloading…",
     "gui_file_info": "{} files, {}",
     "gui_file_info_single": "{} file, {}",
     "history_in_progress_tooltip": "{} in progress",
@@ -152,6 +156,9 @@
     "error_cannot_create_data_dir": "Could not create OnionShare data folder: {}",
     "gui_receive_mode_warning": "Receive mode lets people upload files to your computer.<br><br><b>Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.</b>",
     "gui_chat_mode_explainer": "Chat mode lets you chat interactively with others, in Tor Browser.<br><br><b>Chat history is not stored in OnionShare. The chat history will disappear when you close Tor Browser.</b>",
+    "gui_download_mode_explainer": "Has someone else used OnionShare to send you files?<br><br>You can enter the onion address here to download it, or use Tor Browser.",
+    "gui_download_mode_in_progress": "You are downloading from {}",
+    "gui_download_mode_in_progress_polling": "You are downloading from {}, every {} minutes",
     "gui_open_folder_error": "Could not open the folder with xdg-open. The file is here: {}",
     "gui_settings_language_label": "Language",
     "gui_settings_theme_label": "Theme",
@@ -192,20 +199,24 @@
     "gui_new_tab_receive_button": "Receive Files",
     "gui_new_tab_website_button": "Host a Website",
     "gui_new_tab_chat_button": "Chat Anonymously",
+    "gui_new_tab_download_button": "Download from another OnionShare",
     "gui_main_page_share_button": "Start Sharing",
     "gui_main_page_receive_button": "Start Receiving",
     "gui_main_page_website_button": "Start Hosting",
     "gui_main_page_chat_button": "Start Chatting",
+    "gui_main_page_download_button": "Start Downloading",
     "gui_tab_name_share": "Share",
     "gui_tab_name_receive": "Receive",
     "gui_tab_name_website": "Website",
     "gui_tab_name_chat": "Chat",
+    "gui_tab_name_download": "Download",
     "gui_close_tab_warning_title": "Close tab?",
     "gui_close_tab_warning_persistent_description": "Close persistent tab and lose the onion address it is using?",
     "gui_close_tab_warning_share_description": "Close tab that is sending files?",
     "gui_close_tab_warning_receive_description": "Close tab that is receiving files?",
     "gui_close_tab_warning_chat_description": "Close tab that is hosting a chat server?",
     "gui_close_tab_warning_website_description": "Close tab that is hosting a website?",
+    "gui_close_tab_warning_download_description": "Close tab that is downloading a share?",
     "gui_close_tab_warning_close": "Ok",
     "gui_close_tab_warning_cancel": "Cancel",
     "gui_quit_warning_title": "Quit OnionShare?",
@@ -228,6 +239,11 @@
     "mode_settings_receive_webhook_url_checkbox": "Use notification webhook",
     "mode_settings_website_disable_csp_checkbox": "Don't send default Content Security Policy header (allows your website to use third-party resources)",
     "mode_settings_website_custom_csp_checkbox": "Send a custom Content Security Policy header",
+    "mode_settings_download_onionshare_url_label": "Enter the OnionShare URL that you were sent:",
+    "mode_settings_download_onionshare_uses_private_key": "Were you also sent a Private Key?",
+    "mode_settings_download_onionshare_private_key": "Enter the private key here",
+    "mode_settings_download_poll_label": "Poll the OnionShare URL to download the share periodically (in minutes)",
+    "mode_settings_download_poll_warning_label": "<b>Note: polling will overwrite the same downloaded file each time.</b>",
     "gui_all_modes_transfer_finished_range": "Transferred {} - {}",
     "gui_all_modes_transfer_finished": "Transferred {}",
     "gui_all_modes_transfer_canceled_range": "Canceled {} - {}",
@@ -246,6 +262,7 @@
     "gui_rendezvous_cleanup_quit_early": "Quit Early",
     "error_port_not_available": "OnionShare port not available",
     "history_receive_read_message_button": "Read Message",
+    "history_downloads_error": "There was an error downloading: {}",
     "error_tor_protocol_error": "There was an error with Tor: {}",
     "error_generic": "There was an unexpected error with OnionShare:\n{}",
     "moat_contact_label": "Contacting BridgeDB…",
