Tweaks to new tab UI to support multiple buttons within tab mode selection

--- a/desktop/onionshare/resources/locale/en.json
+++ b/desktop/onionshare/resources/locale/en.json
@@ -200,6 +200,7 @@
     "gui_new_tab_website_button": "Host a Website",
     "gui_new_tab_chat_button": "Chat Anonymously",
     "gui_new_tab_download_button": "Download from another OnionShare",
+    "gui_main_page_welcome_label": "What do you want to do today?",
     "gui_main_page_share_button": "Start Sharing",
     "gui_main_page_receive_button": "Start Receiving",
     "gui_main_page_website_button": "Start Hosting",
